[package]
name = "dirruster"
version = "0.1.0"
authors = ["AshF0x"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
isahc = "1.3.1"
http = "0.2.4"
chrono = "0.4.19"
ansi_term = "0.12.1"
indicatif = "0.16.0"
console = "0.14.1"